--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>cod-cart-express</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <title>apsotle - Your trusted online store</title>
+    <meta name="description" content="apsotle - Your trusted online store for premium products at unbeatable prices" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="cod-cart-express" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="apsotle - Your trusted online store" />
+    <meta property="og:description" content="apsotle - Your trusted online store for premium products at unbeatable prices" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
